fixed z-index
fixed z-index

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -26,7 +26,10 @@ body {
 }
 
 .spec-item {
- margin-right: 30px;   
+position: relative;
+width: 370;
+margin-right: 30px;
+z-index: 1;   
 }
 .out-specs {
     margin-right: 30px;
